feat(admin): merge dev and implement comprehensive admin management features